# FastAPI_RAG_Chatbot

./: .gitignore  BUILD_FROM_SCRATCH.md  DEVOPS_DOCKER_KUBERNETES.md  DOCKER_KUBERNETES_INTERVIEW.md  Dockerfile  INTERVIEW_QA.md  NOTES.md  README.md  alfia_text.txt  chatbot.db-shm  chatbot.db-wal  docker-compose.yml  main.py  pyproject.toml  requirements.txt  walkthrough.md
PROJECT_PATENT/: Alfia Form 2 description 1 2022.docx  Form 1.docx  Form 2.docx  Form 3.docx  Form 5.docx  Form 9.docx
_NOTES/: DEVOPS_DOCKER_KUBERNETES.md  DOCKER_KUBERNETES_INTERVIEW.md  INTERVIEW_QA.md  LOCAL_TO_PRODUCTION.md  NOTES.md  POSTGRES_MIGRATION.md  VECTOR_STORE_QA.md
api/v1/: api.py
api/v1/endpoints/: chat.py  pdf.py  resume.py  threads.py  voice.py
core/: config.py  database.py
frontend/: Dockerfile  app.py  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: Analyzer.tsx  ChatAgent.tsx  Dashboard.tsx  Matcher.tsx
schemas/: chat.py  pdf.py  resume.py  thread.py  voice.py
services/: agent_service.py  rag_service.py  resume_service.py  tools.py  voice_service.py
