[project]
name = "fastapi-voicebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.2",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ddgs>=9.10.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.7.3",
    "langchain-pinecone==0.2.13",
    "pinecone>=7.3.0",
    "python-dotenv>=1.0.0",
]
